--- a/main.html
+++ b/main.html
@@ -10,6 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h1>Why I want to become a developer?</h1>
+<p>1.To Creating something<br>
+2.To Learn new Stuff and Evolving <br>
+3.To Make a Work of Art
+</p>
+
+
 
 </body>
 
